# unoq-braccio

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.sim  README.md  docker-compose.yml
app_lab/braccio_remote_agent/: README.md
app_lab/braccio_remote_agent/python/: main.py
app_lab/braccio_remote_agent/sketch/: sketch.ino
app_lab/braccio_web_agent/: README.md  app.yaml
app_lab/braccio_web_agent/python/: main.py
app_lab/braccio_web_agent/sketch/: sketch.ino  sketch.yaml
app_lab/bricks/unoq_braccio_bridge/: README.md  brick.yaml
app_lab/usb_camera_streamer/: README.md  app.yaml
app_lab/usb_camera_streamer/python/: main.py
docs/: architecture.md  hardware.md  platform-setup.md  vision.md
edge_impulse/: README.md  data_capture.md  label_to_pose.yaml  pick_place_workflows.yaml  runner_template.py
firmware/unoq_braccio_firmware/: unoq_braccio_firmware.ino
models/: README.md
ros2_ws/src/unoq_braccio_bringup/: package.xml  setup.cfg  setup.py
ros2_ws/src/unoq_braccio_bringup/config/: edge_impulse_mapper.yaml
ros2_ws/src/unoq_braccio_bringup/launch/: data_capture.launch.py  edge_impulse_pick_place.launch.py  hardware.launch.py  onboard_edge_impulse_pick_place.launch.py  sim.launch.py  vision_assist.launch.py  vision_remote.launch.py
ros2_ws/src/unoq_braccio_driver/: package.xml  setup.cfg  setup.py
ros2_ws/src/unoq_braccio_sim/: README.md  (+2 more)
scripts/: check_sim_meshes.sh  flash_unoq.ps1  flash_unoq.sh  package_app_lab.ps1  package_app_lab_brick.ps1  setup_ros2.sh
web_app/: README.md  server.py
web_app/static/: app.js  index.html  styles.css
(+22 files in other folders)
