<?xml version="1.0"?>
<package format="3">
  <name>unoq_braccio_bringup</name>
  <version>0.1.0</version>
  <description>Launch files for UNO Q Braccio hardware and simulation.</description>
  <maintainer email="eoin@example.com">Eoin Jordan</maintainer>
  <license>MIT</license>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>unoq_braccio_driver</exec_depend>
  <exec_depend>unoq_braccio_sim</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
